--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="header 1">
         <header class="navigation-bar">
             <div class ="logo">
-                <a href =""><img src = "./Assets/pictures and logos/Logo.png" height ="50px" alt="logo"></a>
+                <a href =" "><img class = logo-img src = "./Assets/pictures and logos/Logo.png"  alt="logo"></a>
             </div>
             <div class="nav-links">
                 <nav>
@@ -61,7 +61,7 @@
 <!-- ........................ -->
       <div class="section">
         <div class="whoAmI">
-        <h2 id="scrollText" class="hover-fill" data-txthover="Nice to meet you">MY NAME IS <span class="name"><br>KELVIN MASETTI </br></span></h2>
+        <h2 id="scrollText" class="hover-fill" data-txthover="Nice to meet you">MY NAME IS <span class="name" ><br>KELVIN MASETTI </br></span></h2>
     </div>
     <div class="line1"></div>
     </div>
@@ -182,9 +182,18 @@
     </div>
 </section>
 <!-- ........................ -->
+ <footer class = "footer">
+    <div class="social-container">
+        <ul class="social-icons">
+            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="#"><i class="fa fa-github"></i></a></li>
+        </ul>
+    </div>
+ </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./index.js" charset="utf-8"></script>
 </body>
-<footer> </footer>
