--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
           <div class="bubbles three"></div>
     </div>
     <div class="subsection hidden">
-        <h3>What do I do?</h3>
-        <p>I Do a lot of things!</p>
+        <h3 class="h3middle">What do I do?</h3>
+
         <p class = "summary"><span class="caps">Well</span> Sed et tortor non metus elementum cursus in nec lectus. Integer vitae nisi quis sem efficitur congue. Aenean iaculis elit vel aliquam pharetra. Proin at ipsum eu odio faucibus vulputate eget imperdiet mi. Nam quis consectetur diam. Nunc at posuere felis, non bibendum velit. Etiam ut euismod ipsum. Morbi pulvinar ac orci eu placerat. Praesent porta mattis ligula sed luctus. Mauris vel magna massa. Nulla eleifend porttitor malesuada.</p>
         <div class = logos>
             <div class="logo hidden">
